# overtrack-web-2

./: .all-contributorsrc  .gitattributes  .gitignore  .gitlab-ci.yml  README.md  main.py  pyproject.toml  zappa_settings.json
.github/workflows/: codeql-analysis.yml
apextrack/: __init__.py  authentication.py  data.py  flask_app.py  local.py  local_flask_app.py  paypal.py  session.py  util.py
apextrack/blueprints/: discord_bot.py  login.py  stats.py  subscribe.py
apextrack/data/: __init__.py  apex.py
apextrack/lib/: authentication.py  context_processors.py  decorators.py  opengraph.py  paypal.py  session.py
apextrack/util/: decorators.py
apextrack/views/: admin.py  discord_bot.py  game.py  games_list.py  login.py  scrims.py  stats.py  subscribe.py
blueprints/: discord_bot.py  login.py  results.py  stats.py
overtrack_web/: settings.yml  zappa_settings.json
overtrack_web/overtrack_web/: flask_app.py  local_flask_app.py
overtrack_web/overtrack_web/data/: __init__.py  apex.py  apex_data.py  overwatch_data.py
overtrack_web/overtrack_web/lib/: __init__.py  authentication.py  context_processors.py  dataclasses_asdict_namedtuple_patch.py  decorators.py  listed_users.py  metrics.py  opengraph.py  overwatch_legacy.py  session.py  template_filters.py
overtrack_web/overtrack_web/mocks/: apex_mocks.py  dynamo_mocks.py  login_mocks.py  overwatch_mocks.py  valorant_mocks.py
overtrack_web/overtrack_web/views/: discord_bot.py  fake_login.py  login.py  make_discord_bot.py  make_notification_bot.py  sitemap.py  subscribe.py
overtrack_web/static/: oembed.json  oembed_photo.json
overtrack_web/static/js/: main.js  map.js  (+1 more)
overtrack_web/templates/: base.html  client.html  faq.html  login.html  navbar.html  opengraph.html  sitemap.xml  sub_request.html  util.html  welcome.html
static/: map.js  oembed.json  style.css
static/css/: games.css  main.css
static/js/: map.js  rank.js  results.js
templates/: base.html  client.html  game.html  game_summary.html  games.html  login.html  map.html  navbar.html  results.html  welcome.html
templates/discord_bot/: channel_add.html  discord_bot.html  root.html
templates/game/: game.html  game_small.html  map.html
templates/games/: game_summary.html  games.html  rank.html
templates/games_list/: game_summary.html  games_list.html
templates/results/: results.html
templates/subscribe/: subscribe.html
(+100 files in other folders)
