[tool.poetry]
name = "overtrack-web-2"
version = "0.2.0"
description = ""
authors = ["Simon Pinfold <simon@uint8.me>"]

[tool.poetry.dependencies]
python = "^3.6"

zappa = { git = "https://github.com/overtrack-gg/Zappa.git", branch = "api-gateway-http-endpoint-support" }
flask = "^1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
