[tool.poetry]
name = "overtrack-web-2"
version = "0.2.0"
description = ""
authors = ["Simon Pinfold <simon@uint8.me>"]

[tool.poetry.dependencies]
python = "^3.6.2"

overtrack-models = { git = "https://gitlab.com/OverTrack/overtrack-models.git", branch = "master" }
pynamodb = "^4"
aws-psycopg2 = "^1.2"
sqlalchemy = "^1"

zappa = { git = "https://github.com/overtrack-gg/Zappa.git", branch = "api-gateway-http-endpoint-support" }
troposphere = "^3.0.0"
flask = "^1"
pyjwt = "*"
requests_oauthlib = "*"
dataclasses = "*"
shortuuid = "*"

datadog = "^0"
sentry_sdk = "^0"
stripe = "^2.35"
humanize = "^2.4.0"
wheel = "^0.35.1"

[tool.poetry.dev-dependencies]

libsass = "^0.19"
boussole = "^1.5"
boto3-stubs = {extras = ["s3", "logs"], version = "^1.11.14"}
mypy = "^0.761"
requests-cache = "^0.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
